tests/errors/pp-cannot-eval-if-2.h
#define A 1
#if defined A && defined B
#endif
